tests/pass/check/any_construct_qualifier/main.kira
construct Widget {
}

@Runtime
function acceptWidget(value: any Widget) {
    return;
}

@Main
function entry() {
    return;
}
