tests/fail/semantics/any_requires_construct_primitive/main.kira
function acceptInt(value: any Int) {
    return;
}
